--- a/templates/loginpage.html
+++ b/templates/loginpage.html
@@ -71,7 +71,7 @@
     >
       <div class="mb-4 d-none d-md-block">
         <img
-          src="{% static 'images/loginBgImage.jpg' %}"
+          src="https://res.cloudinary.com/dyfu3aiar/image/upload/v1765105995/loginBgImage_umzug7.png"
           alt="Sleep Disorder Logo"
           width="450"
           class="mb-4 d-block mx-auto"
