--- a/templates/aboutpage.html
+++ b/templates/aboutpage.html
@@ -7,7 +7,7 @@
       rel="icon"
       type="image/png"
       sizes="32x32"
-      href="{% static 'images/favicon.png' %}"
+      href="https://res.cloudinary.com/dyfu3aiar/image/upload/v1765106430/favicon_xixwkl.png"
     />
     <link
       rel="icon"
@@ -154,7 +154,7 @@
           <div class="info-card">
             <h5 class="text-center">Random Forest</h5>
             <img
-              src="{% static 'images/RF_confusion.png' %}"
+              src="https://res.cloudinary.com/dyfu3aiar/image/upload/v1765106562/RF_confusion_lyqorl.png"
               class="matrix-img"
             />
           </div>
@@ -164,7 +164,7 @@
           <div class="info-card">
             <h5 class="text-center">CNN Model</h5>
             <img
-              src="{% static 'images/CNN_confusion.png' %}"
+              src="https://res.cloudinary.com/dyfu3aiar/image/upload/v1765106561/CNN_confusion_mtvrek.png"
               class="matrix-img"
             />
           </div>
@@ -174,7 +174,7 @@
           <div class="info-card">
             <h5 class="text-center">LSTM Model</h5>
             <img
-              src="{% static 'images/LSTM_confusion.png' %}"
+              src="https://res.cloudinary.com/dyfu3aiar/image/upload/v1765106562/LSTM_confusion_cnwrk8.png"
               class="matrix-img"
             />
           </div>
