--- a/templates/home.html
+++ b/templates/home.html
@@ -8,7 +8,7 @@
       rel="icon"
       type="image/png"
       sizes="32x32"
-      href="{% static 'images/favicon.png' %}"
+      href="https://res.cloudinary.com/dyfu3aiar/image/upload/v1765106430/favicon_xixwkl.png"
     />
     <link
       rel="icon"
@@ -183,7 +183,7 @@
 
         <div class="col-md-6 text-center d-none d-md-block">
           <img
-            src="{% static 'images/sleepIllustration2.png' %}"
+            src="https://res.cloudinary.com/dyfu3aiar/image/upload/v1765106536/sleepIllustration2_ynxcdw.png"
             class="img-fluid"
             alt="Sleep Illustration"
           />
@@ -244,7 +244,7 @@
           <div class="p-4 info-card h-100">
             <div class="d-flex align-items-center mb-2">
               <img
-                src="{% static 'images/brain_icon.png' %}"
+                src="https://res.cloudinary.com/dyfu3aiar/image/upload/v1765106562/brain_icon_nlfcyh.png"
                 width="40"
                 class="me-3"
               />
@@ -262,7 +262,7 @@
           <div class="p-4 info-card h-100">
             <div class="d-flex align-items-center mb-2">
               <img
-                src="{% static 'images/health_icon.png' %}"
+                src="https://res.cloudinary.com/dyfu3aiar/image/upload/v1765106562/health_icon_v46fmg.png"
                 width="40"
                 class="me-3"
               />
@@ -282,7 +282,7 @@
           <div class="p-4 info-card h-100">
             <div class="d-flex align-items-center mb-2">
               <img
-                src="{% static 'images/monitor_icon.png' %}"
+                src="https://res.cloudinary.com/dyfu3aiar/image/upload/v1765106563/monitor_icon_yde2w4.png"
                 width="40"
                 class="me-3"
               />
