--- a/templates/loginpage.html
+++ b/templates/loginpage.html
@@ -9,7 +9,7 @@
       rel="icon"
       type="image/png"
       sizes="32x32"
-      href="{% static 'images/favicon.png' %}"
+      href="https://res.cloudinary.com/dyfu3aiar/image/upload/v1765106430/favicon_xixwkl.png"
     />
     <link
       rel="icon"
