--- a/templates/inputpage.html
+++ b/templates/inputpage.html
@@ -7,7 +7,7 @@
       rel="icon"
       type="image/png"
       sizes="32x32"
-      href="{% static 'images/favicon.png' %}"
+      href="https://res.cloudinary.com/dyfu3aiar/image/upload/v1765106430/favicon_xixwkl.png"
     />
     <link
       rel="icon"
@@ -93,7 +93,7 @@
         <!-- Illustration -->
         <div class="col-md-6 text-center d-none d-md-block">
           <img
-            src="{% static 'images/sleep_form_illustration.png' %}"
+            src="https://res.cloudinary.com/dyfu3aiar/image/upload/v1765106563/sleep_form_illustration_ivjvj9.png"
             class="illustration-img"
             alt="Sleep Form Illustration"
           />
